# kubachi_translater_bot

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.embedder  Makefile  README.md  alembic.ini  docker-compose.vps-tunnel.yml  docker-compose.yml  mypy.ini  pyproject.toml  requirements.bot.txt  requirements.embedder.txt  requirements.txt  ruff.toml
benchmarks/: __init__.py  retrieval.py  retrieval_cases.json
migrations/: env.py  script.py.mako
migrations/versions/: 20260402_0001_initial_schema.py  20260403_0002_admin_panel.py  20260403_0003_admin_panel_backfill.py  20260403_0004_actions_structure.py  20260403_0005_actions_simplify.py  20260403_0006_actions_drop_generic.py  20260403_0007_drop_dictionary_entry_legacy_columns.py  20260403_0008_replace_contributors_with_users.py  20260416_0009_drop_actions_date_time.py  20260416_0010_backfill_users_updated_at_from_actions.py  20260416_0011_user_profile_counters.py  20260417_0012_broadcast_tracking.py  20260417_0013_broadcast_source_messages.py  20260423_0014_score_public_profile.py
scripts/: deploy_vps.sh
src/: bot_app.py  config.py  import_dictionary.py  index_rag.py  main.py  models.py  normalization.py  run_embedding_service.py  texts.py
src/bot/: __init__.py  application.py  bootstrap.py  flows.py  handlers.py
src/embedding_service/: __init__.py  api.py  app.py  main.py
src/repositories/: __init__.py  csv_repository.py  (+2 more)
tests/: conftest.py  test_admin_panel_contract.py  test_bot_handlers.py  test_config.py  test_db_repository.py  test_postgres_dictionary_repository.py  test_rag_service.py  test_search_service.py
(+25 files in other folders)
